packages/next-swc/crates/core/tests/errors/next-font-downloaders/without-font-modules/assigned-to-const/input.js
import { Inter } from '@next/google-fonts'
const inter = Inter({ variant: '400' })
